--- a/index.html
+++ b/index.html
@@ -2,12 +2,56 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Онлайн компилятор</title>
+    <meta name="viewport" content="width=device-width", initial-scale = 1>
+    <title>Аригато - доставка суши в Улан-Удэ | arigato03.ru</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel = "stylesheet" href="css/font-awesome.min.css">
+    <link rel = "stylesheet" href="css/main.css"
+
   </head>
-  <body>
-    <script src="index.js"></script>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <span class="descript">Ресторан доставки готовых блюд в Улан-Удэ</span>
+        <ul class="row">
+          <li class="col">Роллы</li>
+          <li class="col">Вок</li>
+          <li class="col">Бургеры</li>
+        </ul>
+      </div>
+      <a href="#" class="logo"></a>
+      <div class="col">
+        Доставляем ежедневно <br/>
+        Закажите звонок
+        <a href="tel:+7(3012)51-55-11">+7(3012) 51-55-11</a>
+      </div>
+    </div>
+
+    <div class="row">
+      <ul class="menu_container row">
+        <li>Меню</li>
+        <li>Акции и скидки</li>
+        <li>Доставка</li>
+        <li>Отзывы</li>
+        <li>О компании</li>
+        <li>Контакты</li>
+        <li>Блог</li>
+        <li class="menu_llc_panel">
+          <a href="#" class="search_button"></a>
+          <a href="#" class="llc_button"></a>
+          <a href="#" class="cart"></a>
+        </li>
+      </ul>
+  </div>
+    Official Themes
+    Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
+
+    Bootstrap Themes
+  </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   </body>
 </html>
-ываыовар
