--- a/index.html
+++ b/index.html
@@ -1,57 +1,133 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale = 1>
-    <title>Аригато - доставка суши в Улан-Удэ | arigato03.ru</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel = "stylesheet" href="css/font-awesome.min.css">
-    <link rel = "stylesheet" href="css/main.css"
-
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width", initial-scale = 1>
+  <title>Аригато - доставка суши в Улан-Удэ | arigato03.ru</title>
+  <link href="index.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel = "stylesheet" href="css/font-awesome.min.css">
+  <link rel = "stylesheet" href="css/main.css">
+</head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <span class="descript">Ресторан доставки готовых блюд в Улан-Удэ</span>
-        <ul class="row">
-          <li class="col">Роллы</li>
-          <li class="col">Вок</li>
-          <li class="col">Бургеры</li>
-        </ul>
-      </div>
-      <a href="#" class="logo"></a>
-      <div class="col">
-        Доставляем ежедневно <br/>
-        Закажите звонок
-        <a href="tel:+7(3012)51-55-11">+7(3012) 51-55-11</a>
-      </div>
+<header>
+  <div class="header-tools container">
+    <div class="left-tools-head">
+      <span class="descript">Ресторан доставки готовых блюд в Улан-Удэ</span>
+      <ul class="head-menu">
+        <li><a href="#"><img src="img/icon-sushi-head.png">Роллы</a></li>
+        <li><a href="#"><img src="img/icon-vok-head.png">Вок</a></li>
+        <li><a href="#"><img src="img/icon-burger-head.png">Бургеры</a></li>
+      </ul>
     </div>
-
-    <div class="row">
-      <ul class="menu_container row">
-        <li>Меню</li>
-        <li>Акции и скидки</li>
-        <li>Доставка</li>
-        <li>Отзывы</li>
-        <li>О компании</li>
-        <li>Контакты</li>
-        <li>Блог</li>
-        <li class="menu_llc_panel">
-          <a href="#" class="search_button"></a>
-          <a href="#" class="llc_button"></a>
-          <a href="#" class="cart"></a>
+    <div class="right-tools-head">
+      <ul>
+        <li><img src="img/delivery-truck-icon-head.png"></li>
+        <li>
+          <span>Доставляем ежедневно</span><br/>
+          с 10:00 до 00:30
+        </li>
+        <li><img src="img/phone-call-icon-head.png"></li>
+        <li>
+          <span>Закажите звонок</span><br/>
+          <a href="tel:+7(3012)51-55-11">+7(3012) 51-55-11</a>
         </li>
       </ul>
+    </div>
   </div>
-    Official Themes
-    Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
+  <nav  class="top-menu">
+    <div class="container">
+      <ul class="menu-main">
+        <li class="left-item"><a href="#"><img src="img/icon-menu.png">Меню</a></li>
+        <li class="left-item"><a href="#">Акции и скидки</a></li>
+        <li class="left-item"><a href="#">Доставка</a></li>
+        <li class="left-item"><a href="#">Отзывы</a></li>
+        <li>
+          <a href="#" class="right-item-icon"><img src="img/loupe.png"></a>
+          <a href="#" class="right-item-icon"><img src="img/user.png"></a>
+          <a href="#" class="right-item-icon"><img src="img/shopping-basket.png"></a>
+        </li>
+        <li class="right-item"><a href="#">Блог</a></li>
+        <li class="right-item"><a href="#">Контакты</a></li>
+        <li class="right-item"><a href="#">О компании</a></li>
+      </ul>
+      <a class="navbar-logo"><img src="img/logo1.png"></a>
+    </div>
+  </nav>
+</header>
 
-    Bootstrap Themes
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <img src="img/banner-main-page.jpg" alt="First slide">
+        <div class="carousel-caption">
+          <h1>Шеф-повар <br/>раздает подарки</h1>
+          <p>При покупке от 700 рублей, ролл на выбор бесплатно</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/banner-main-page.jpg" alt="Second slide">
+        <div class="carousel-caption">
+          <h1>Шеф-повар <br/>раздает подарки</h1>
+          <p>При покупке от 700 рублей, ролл на выбор бесплатно</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/banner-main-page.jpg" alt="Third slide">
+        <div class="carousel-caption">
+          <h1>Шеф-повар <br/>раздает подарки</h1>
+          <p>При покупке от 700 рублей, ролл на выбор бесплатно</p>
+        </div>
+      </div>
+    </div>
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="icon-prev" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="icon-next" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-  </body>
+
+<div class="container">
+  <div class="action-main">
+    <div class="row">
+      <h2 class="col-5">Рекомендованные акции</h2>
+      <a class="col-1">Все акции</a>
+    </div>
+    <div class="action-main-card row">
+      <div class="col-6">
+        <div class="row">
+          <div class="col-8 action1">
+            <h3>Счастливые часы</h3>
+            <p>В будние дни с 10:00 до 16:00, <br/>скидка на все меню 15%*</p>
+            <p>*не распространяется на наборы<br/>и напитки</p>
+          </div>
+          <div class="col">
+            До конца акции осталось:
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <h3>Бесплатная доставка</h3>
+        <p>При заказе от 500 рублей,<br/>доставка осуществляется <br/>бесплатно.</p>
+      </div>
+      <div class="col">
+        <h3>Студентам -10%*</h3>
+        <p>*не распространяется на наборы<br/>и напитки</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+</body>
 </html>
